# datakenobi

./: .flake8  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: continuous_integration.yml
datakenobi/conf/: logger_conf.py
datakenobi/conf/project_template/: .env-tpl  settings.py-tpl
datakenobi/core/: aria2.py  file_handler.py
datakenobi/db/: base.py  connection_handler.py  utils.py
tests/: test_db_base.py  test_db_connection_handler.py  test_db_util.py  test_db_utils.py
tests/models/: car_model.py
