[tool.poetry]
name = "datakenobi"
version = "0.1.0"
description = ""
authors = ["Marciel Barcellos <msbar2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.1"
SQLAlchemy = "^1.4.42"
crypton-tool = "^1.0.0"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
mypy = "^0.982"
flake8 = "^5.0.4"
isort = "^5.10.1"
pre-commit = "^2.20.0"
pep8-naming = "^0.13.2"
pip-audit = "^2.4.4"


[tool.poetry.group.test.dependencies]
pytest = "^7.1.3"
pytest-cov = "^4.0.0"


[tool.poetry.group.doc.dependencies]
mkdocs = "^1.4.1"
mkdocs-material = "^8.5.6"
pymdown-extensions = "^9.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
profile = "black"
skip_glob = ["docs/*"]
multi_line_output = 3


[tool.mypy]
strict = true
ignore_missing_imports = true
disallow_untyped_defs = true


[tool.black]
target-version = ['py310']
preview = true
force-exclude = '''
.*/setup\.py$
'''


[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
